# trc2026_ros2

./: .gitignore  .gitmodules  404.html  README.md  build_depends.repos  index.html  justfile  mkdocs.yaml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: ci.yaml  docs.yaml
bringup/: index.html
control/: index.html
control/four_wheel_steer_controller/: index.html
description/: index.html
docs/: index.md
docs/bringup/: index.md
docs/control/: four_wheel_steer_controller.md
docs/description/: index.md
docs/gazebo/: index.md
docs/manual/: drive_manual_controller.md  index.md
gazebo/: index.html
manual/: index.html
manual/drive_manual_controller/: index.html
navigation/: index.html
scripts/: auto_launch.bash
search/: search_index.json
trc2026_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
trc2026_bringup/config/: arm_params.yaml  aruco_missions.csv  localization.yaml  mag_calibration.yaml  twist_mux.yaml
trc2026_bringup/launch/: arm.launch.yaml  aruco.launch.yaml  real.launch.py  real.launch.yaml  sim.launch.py  sim.launch.yaml
trc2026_bringup/rviz/: nav2_view.rviz
trc2026_bringup/scripts/: bgra_to_bgr_converter.py  camera_node.py  imu_relay_node.py  mag_calibrate.py  mag_calibrate_viz.py  mag_logger_node.py  mag_relay_node.py  webrtc_auto_launch.sh
trc2026_control/: CMakeLists.txt  package.xml
trc2026_control/docs/: index.md
trc2026_control/include/trc2026_control/: aruco_mission_node.hpp  control_history_csv_logger_node.hpp  four_wheel_steer_controller.hpp
trc2026_control/include/trc2026_control/drive/: four_wheel_steer_controller.hpp
trc2026_control/include/trc2026_control/led/: led_controller.hpp
trc2026_control/src/: aruco_mission_node.cpp  control_history_csv_logger_node.cpp  four_wheel_steer_controller.cpp
trc2026_control/src/drive/: four_wheel_steer_controller.cpp
trc2026_control/src/led/: led_controller.cpp
trc2026_description/: package.xml  setup.cfg  setup.py
trc2026_description/launch/: display.launch.py  gazebo.launch.py
trc2026_description/meshes/: arm_1_link.stl  arm_2_link.stl  arm_3_link.stl  arm_3_rotate_link.stl  arm_3_shaft_link.stl  arm_4_link.stl  base_link.stl  hand_left_link.stl  hand_right_link.stl  leg_left_link.stl  leg_right_link.stl  wheel_left_backward_link.stl  wheel_left_forward_link_1.stl  wheel_right_backward_link.stl  wheel_right_forward_link.stl
trc2026_description/urdf/: materials.xacro  trc2026.gazebo  trc2026.trans  trc2026.xacro  trc2026_ros2_control.xacro
trc2026_driver/: CMakeLists.txt  package.xml
trc2026_driver/include/trc2026_driver/: robstride_bridge.hpp
trc2026_driver/scripts/: can_rx_node.py  can_tx_node.py  robstride_bridge.py  robstride_teleop.py
trc2026_driver/scripts/src/: position_control.py
trc2026_driver/src/: robstride_bridge.cpp
trc2026_gazebo/: package.xml  setup.cfg  setup.py
trc2026_gazebo/config/: gz_ros2_control.yaml  ros_gz_bridge.yaml
trc2026_gazebo/launch/: simulation.launch.py  spawn.launch.py
trc2026_gazebo/models/field_red/: model.config  model.sdf
trc2026_gazebo/worlds/: empty.sdf  field_red.sdf  mars_curiosity.world
trc2026_manual/: CMakeLists.txt  package.xml
trc2026_manual/docs/: drive_manual_controller.md
trc2026_manual/include/trc2026_manual/: arm_manual_controller.hpp  base_manual_controller.hpp  drive_manual_controller.hpp  joy_filter.hpp
trc2026_manual/launch/: manual.launch.py  manual.launch.yaml
trc2026_manual/src/: arm_manual_controller.cpp  drive_manual_controller.cpp  joy_filter.cpp
trc2026_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
trc2026_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  servo_config.yaml  trc2026.ros2_control.xacro  trc2026.srdf  trc2026.urdf.xacro
trc2026_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
trc2026_msgs/: CMakeLists.txt  package.xml
trc2026_navigation/: CMakeLists.txt  package.xml
trc2026_navigation/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py
trc2026_navigation/params/: nav2_params.yaml
trc2026_vision/: package.xml  setup.cfg  setup.py
trc2026_vision/trc2026_vision/: bgra_to_bgr_converter.py  marker_pose_estimator.py
