<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trc2026_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation package for TRC2026 robot</description>
  <maintainer email="kengo171227@gmail.com">kengo</maintainer>
  <license>Apache-2.0</license>

  <depend>trc2026_description</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>launch_ros</build_depend>

  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
